# aplikacija

./: .gitignore  Cargo.toml  DOCUMENTATION_COMPLETION_REPORT.md  HARDCODED_TEST_VALUES_SECURITY_FIX_REPORT.md  NAVODILA.md  README.md  SECURE_ENCLAVE_IMPLEMENTATION_SUMMARY.md  ULTRA_PERFORMANCE_IMPLEMENTATION.md  benchmark_analysis_2025_01_06.md  clippy_output.txt  complete_optimization_summary.md  fix_clippy_errors.py  fix_critical_errors.py  fix_ultra_strict_clippy.py  mcp_settings.json  performance_regression_fix_report.md  production_readiness_audit_report.md  test_security_implementation.py  verify_security_fix.py
.github/: PULL_REQUEST_TEMPLATE.md
.tallyio_cache/: test_cache.json
crates/core/: Cargo.toml  README.md
crates/core/benches/: advanced_features.rs  engine_bench.rs  mempool_bench.rs  simple_bench.rs  system_optimization_bench.rs  ultra_optimized_bench.rs  ultra_performance_bench.rs  work_stealing_bench.rs
crates/core/src/: config.rs  error.rs  lib.rs  prelude.rs
crates/core/src/engine/: adaptive_scaling.rs  backpressure.rs  batch_processor.rs  circuit_breaker.rs  enhanced_load_balancer.rs  executor.rs  load_testing.rs  mod.rs  numa.rs  numa_scheduler.rs  predictive_metrics.rs  scheduler.rs  work_stealing.rs  worker.rs
crates/core/src/engine/ultra/: README.md  financial_scheduler.rs  mod.rs
crates/core/src/lockfree/: cache.rs  concurrent_algorithms.rs  mod.rs  queue.rs  ring_buffer.rs
crates/core/src/lockfree/ultra/: cache_aligned.rs  memory_pool.rs  mod.rs  spsc_queue.rs
crates/core/src/memory/: allocator.rs  mod.rs  pool.rs  pressure.rs  stats.rs
crates/core/src/mempool/: analyzer.rs  filter.rs  mod.rs  watcher.rs
crates/core/src/optimization/: cpu_affinity.rs  cpu_cache.rs  io_uring.rs  jemalloc_tuning.rs  kernel_bypass.rs  lock_free.rs  memory_pool.rs  mod.rs  mpc_batch.rs  numa_allocator.rs  performance_monitor.rs  realtime.rs  regression_testing.rs  simd.rs  spsc_queue_ultra.rs  typed_lock_free_queue.rs  ultra_ring_buffer.rs
crates/core/src/state/: global.rs  local.rs  mod.rs  sync.rs
crates/core/src/types/: mod.rs  opportunity.rs  result.rs  transaction.rs
crates/core/tests/: advanced_features_integration.rs  comprehensive_integration_tests.rs  economic_tests.rs  engine_basic_test.rs  engine_test.rs  security_tests.rs  state_consistency_tests.rs  state_test.rs  timing_tests.rs  ultra_integration_tests.rs
crates/data_storage/: Cargo.toml  README.md
crates/data_storage/benches/: storage_bench.rs
crates/data_storage/data/hot/: tallyio.redb
crates/data_storage/migrations/: V001__create_hypertables.sql
crates/data_storage/src/: config.rs  error.rs  lib.rs  types.rs
crates/data_storage/src/cache/: cache_strategy.rs  memory_cache.rs  mod.rs  redis_cache.rs
crates/data_storage/src/indexer/: mod.rs
crates/data_storage/src/metrics/: mod.rs
crates/data_storage/src/optimization/: allocator.rs  lock_free.rs  memory_pool.rs  mod.rs  numa.rs  simd.rs
crates/data_storage/src/pipeline/: batch_processor.rs  ingestion.rs  mod.rs  transformation.rs  validation.rs
crates/data_storage/src/storage/: cold_storage.rs  hot_storage.rs  hybrid_store.rs  mod.rs  ultra_hot_storage.rs  warm_storage.rs
crates/data_storage/src/stream/: aggregator.rs  buffer.rs  mod.rs  processor.rs
crates/data_storage/tests/: integration_tests.rs
crates/network/: Cargo.toml  README.md
crates/network/benches/: http_bench.rs  load_balancer_bench.rs  websocket_bench.rs
crates/network/src/: config.rs  error.rs  lib.rs  load_balancer.rs  manager.rs  metrics.rs  p2p.rs  types.rs
crates/network/src/http/: circuit_breaker.rs  client.rs  mod.rs  retry.rs
crates/network/src/security/: certificate_pinning.rs  dos_protection.rs  mod.rs  rate_limiting.rs  request_signing.rs
crates/network/src/websocket/: client.rs  connection.rs  handler.rs  manager.rs  mod.rs
crates/secure_storage/: AUDIT_IMPLEMENTATION.md  Cargo.toml  README.md  secure_storage.db
crates/secure_storage/benches/: mpc_bench.rs  ultra_optimized_mpc_bench.rs
crates/secure_storage/dev_sealed/: test_sealed_key.sealed
crates/secure_storage/docs/: SECURE_ENCLAVE_INTEGRATION.md
crates/secure_storage/examples/: secure_enclave_demo.rs
crates/secure_storage/src/: config.rs  error.rs  fips.rs  lib.rs  quantum_resistant.rs  side_channel.rs  types.rs  ultra_optimized_mpc.rs  zk_proofs.rs
crates/secure_storage/src/crypto/: hash_optimized.rs  mod.rs  secp256k1_optimized.rs
crates/secure_storage/src/encryption/: aes_gcm.rs  key_derivation.rs  mod.rs
crates/secure_storage/src/hsm/: integration.rs  mock_hsm.rs  mod.rs
crates/secure_storage/src/key_rotation/: mod.rs
crates/secure_storage/src/memory/: mod.rs  secure_buffer.rs
crates/secure_storage/src/mpc/: dkg.rs  mod.rs  protocol.rs  threshold.rs  verification.rs
crates/secure_storage/src/rate_limiting/: mod.rs
crates/secure_storage/src/secure_enclave/: attestation.rs  integration.rs  mod.rs  sealed_storage.rs  sgx.rs  trustzone.rs
crates/secure_storage/src/tfa/: backup_codes.rs  biometric.rs  hardware.rs  hotp.rs  mod.rs  rate_limiting.rs  totp.rs
crates/secure_storage/src/vault/: hashicorp_vault.rs  local_vault.rs  mod.rs
crates/secure_storage/src/zero_alloc/: buffer_pool.rs  fixed_arrays.rs  memory_pool.rs  mod.rs  stack_crypto.rs
crates/secure_storage/tests/: encryption_test.rs  mpc_test.rs  secure_enclave_integration_test.rs  vault_test.rs
docs/: benchmark-report.md  benchmark-summary.md  clippy-fixes-memory-optimization.md  executive-summary.md  final-clippy-compliance-report.md  optimization-plan.md  phase1-critical-implementation.md  week1-2-benchmark-status.md  week1-2-final-report.md  week1-2-implementation-report.md  week1-2-ultra-strict-compliance.md  week2-3-memory-optimization-report.md
scripts/: analyze_config.py  clippy_check.py  code.py  complete_documentation.py  final_clippy_fix.py  fix_clippy_secure_storage.py  fix_critical_clippy.py  fix_vec_new.py  module_test_mapping_analyzer.py  production_deployment_checklist.py  production_security_validation.py  regression_analyzer.py  test_ultra_performance.py  (+1 more)
(+6 files in other folders)
